Register API (sending email included)

--- a/App.Mail/MailTemplates/Sample1/sample1.css
+++ b/App.Mail/MailTemplates/Sample1/sample1.css
@@ -1,3 +1,18 @@
-body{
-    color:red;
+
+body, td, input, textarea, select {
+    font-size: 15px !important;
+    font-family: 'Noto Sans', sans-serif !important;
+}
+.button {
+    background-color: #1c87c9;
+    border: none;
+    color: white !important;
+    padding: 20px 34px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 20px;
 }
